tests/rosetta/out/C/anonymous-recursion-2.error
cc: exit status 1
/tmp/anonymous-recursion-2.c: In function ‘main’:
/tmp/anonymous-recursion-2.c:66:17: error: subscripted value is neither array nor pointer nor vector
   66 |     int i = tmp1[tmp2];
      |                 ^
/tmp/anonymous-recursion-2.c: At top level:
/tmp/anonymous-recursion-2.c:84:5: error: redefinition of ‘main’
   84 | int main() {
      |     ^~~~
/tmp/anonymous-recursion-2.c:51:5: note: previous definition of ‘main’ with type ‘int()’
   51 | int main() {
      |     ^~~~
